force-app/main/default/objects/RecurringSlot__c/RecurringSlot__c.object-meta.xml
<CustomObject>
    <description>Object containing recurring slots definition. Represent typical daily slot configuration.</description>
    <label>Créneau récurrent</label>
    <nameField>
        <displayFormat>RS{00000}</displayFormat>
        <label>Recurring slot number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Créneaux récurrents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>