force-app/main/default/objects/RecurringSlot__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Store concerned by the recurring slot</description>
    <label>Store</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Recurring slots</relationshipLabel>
    <relationshipName>RecurringSlots</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>