force-app/main/default/objects/RecurringSlot__c/fields/AvailablePositions__c.field-meta.xml
<CustomField>
    <fullName>AvailablePositions__c</fullName>
    <description>Number of available positions (number of customer that can enter) for each slots generated by this recurrence</description>
    <label>Available positions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>