force-app/main/default/objects/RecurringSlot__c/fields/DataLoadId__c.field-meta.xml
<CustomField>
    <fullName>DataLoadId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Contains a unique ID used during data load</description>
    <externalId>true</externalId>
    <label>Data Load External ID</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>