force-app/main/default/objects/RecurringSlot__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <defaultValue>$Setup.QueueBustingConfig__c.DefaultSlotDuration__c</defaultValue>
    <description>Duration of the slots created by this recurrence in minutes</description>
    <label>Duration (in minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>