force-app/main/default/objects/RecurringSlot__c/fields/EndTime__c.field-meta.xml
<CustomField>
    <fullName>EndTime__c</fullName>
    <description>Define the ending time of the slot</description>
    <inlineHelpText>Define the ending time of the slot</inlineHelpText>
    <label>End Time</label>
    <required>true</required>
    <type>Time</type>
</CustomField>