force-app/main/default/objects/RecurringSlot__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>True when the recurring slot is active</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>