force-app/main/default/objects/RecurringSlot__c/fields/StartDatetime__c.field-meta.xml
<CustomField>
    <fullName>StartDatetime__c</fullName>
    <description>Date and time from which the recurrence will start</description>
    <label>Starting date/time</label>
    <type>DateTime</type>
</CustomField>