force-app/main/default/objects/RecurringSlot__c/fields/StartTime__c.field-meta.xml
<CustomField>
    <fullName>StartTime__c</fullName>
    <description>Define the starting time of the slot</description>
    <inlineHelpText>Define the starting time of the slot</inlineHelpText>
    <label>Start Time</label>
    <required>true</required>
    <type>Time</type>
</CustomField>