force-app/main/default/objects/RecurringSlot__c/fields/TECH_Endtime__c.field-meta.xml
<CustomField>
    <fullName>TECH_Endtime__c</fullName>
    <formula>IF(ISBLANK(EndTime__c),&apos;&apos;,LEFT(TEXT( EndTime__c ),5))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_Endtime</label>
    <type>Text</type>
</CustomField>