force-app/main/default/objects/RecurringSlot__c/fields/TECH_Starttime__c.field-meta.xml
<CustomField>
    <fullName>TECH_Starttime__c</fullName>
    <formula>IF(ISBLANK(StartTime__c),&apos;&apos;,LEFT(TEXT( StartTime__c ),5))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_Starttime</label>
    <type>Text</type>
</CustomField>