force-app/main/default/objects/RecurringSlot__c/listViews/AllRecurringSlots.listView-meta.xml
<ListView>
    <fullName>AllRecurringSlots</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>RecurrenceDays__c</columns>
    <columns>StartDatetime__c</columns>
    <columns>AvailablePositions__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tous les créneaux récurrents</label>
</ListView>